test_suite/test_programs/validation/validation_basic_syntax.csd
vibe main

yeet "vibez"

slay main_character() {
    vibez.spill("=== Basic Syntax Test ===")
    
    sus age normie = 25
    vibez.spill(age)
    
    sus name tea = "CURSED"
    vibez.spill(name)
    
    sus is_cool lit = based
    vibez.spill(is_cool)
    
    vibez.spill("=== Test Complete ===")
}
