test_suite/test_programs/errors/02_undefined_variable.csd
vibe main

yeet "vibez"

slay main_character() {
    vibez.spill("=== Undefined Variable Test ===")
    
    vibez.spill("Using undefined variable:")
    vibez.spill(undefined_var)
    
    vibez.spill("This should not execute")
}
